@@ -6,7 +6,7 @@
 #
 
 #j2ee.classpath=
-j2ee.jar.base.dir=/usr/local/pkg/jboss
+#j2ee.jar.base.dir=
 
 #
 # You'll only need this property if you want to
@@ -14,19 +14,18 @@ j2ee.jar.base.dir=/usr/local/pkg/jboss
 # oracle-thin jdbc driver / dbms
 #
 
-oracle-thin.jdbc.jar.file=/usr/local/pkg/oracle_jdbc_thin/lib/classes12.jar
+#oracle-thin.jdbc.jar.file=
 
 #
 # this stuff is only required if you want to run
 # the various tests. very optional
 #
 
-test.jdbc.driver.jar.file=/usr/local/pkg/postgres/share/java/postgresql.jar
-test.jdbc.drivers=org.postgresql.Driver
-test.jdbc.url=jdbc:postgresql://localhost/c3p0-test
-test.jdbc.user=swaldman
-test.jdbc.password=test
-
+#test.jdbc.driver.jar.file=
+#test.jdbc.drivers=
+#test.jdbc.url=
+#test.jdbc.user=
+#test.jdbc.password=
 
 
 
