@@ -2,9 +2,9 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc (build 1.4.2_05) on Mon Feb 07 03:29:07 EST 2005 -->
+<!-- Generated by javadoc (build 1.4.2_05) on Wed Mar 02 03:43:18 EST 2005 -->
 <TITLE>
-All Classes (c3p0-oracle-thin-extras-0.8.5 API Documentation)
+All Classes (c3p0-oracle-thin-extras-0.8.5.1 API Documentation)
 </TITLE>
 
 
