@@ -2,9 +2,9 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc (build 1.4.2_05) on Mon Feb 07 03:29:07 EST 2005 -->
+<!-- Generated by javadoc (build 1.4.2_05) on Wed Mar 02 03:43:18 EST 2005 -->
 <TITLE>
-com.mchange.v2.c3p0.dbms Class Hierarchy (c3p0-oracle-thin-extras-0.8.5 API Documentation)
+com.mchange.v2.c3p0.dbms Class Hierarchy (c3p0-oracle-thin-extras-0.8.5.1 API Documentation)
 </TITLE>
 
 
@@ -13,7 +13,7 @@ com.mchange.v2.c3p0.dbms Class Hierarchy (c3p0-oracle-thin-extras-0.8.5 API Docu
 <SCRIPT type="text/javascript">
 function windowTitle()
 {
-    parent.document.title="com.mchange.v2.c3p0.dbms Class Hierarchy (c3p0-oracle-thin-extras-0.8.5 API Documentation)";
+    parent.document.title="com.mchange.v2.c3p0.dbms Class Hierarchy (c3p0-oracle-thin-extras-0.8.5.1 API Documentation)";
 }
 </SCRIPT>
 
