@@ -2,9 +2,9 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc (build 1.4.2_05) on Mon Feb 07 03:29:06 EST 2005 -->
+<!-- Generated by javadoc (build 1.4.2_05) on Wed Mar 02 03:43:17 EST 2005 -->
 <TITLE>
-Constant Field Values (c3p0-oracle-thin-extras-0.8.5 API Documentation)
+Constant Field Values (c3p0-oracle-thin-extras-0.8.5.1 API Documentation)
 </TITLE>
 
 
@@ -13,7 +13,7 @@ Constant Field Values (c3p0-oracle-thin-extras-0.8.5 API Documentation)
 <SCRIPT type="text/javascript">
 function windowTitle()
 {
-    parent.document.title="Constant Field Values (c3p0-oracle-thin-extras-0.8.5 API Documentation)";
+    parent.document.title="Constant Field Values (c3p0-oracle-thin-extras-0.8.5.1 API Documentation)";
 }
 </SCRIPT>
 
