@@ -2,9 +2,9 @@
 <!--NewPage-->
 <HTML>
 <HEAD>
-<!-- Generated by javadoc on Mon Feb 07 03:29:07 EST 2005-->
+<!-- Generated by javadoc on Wed Mar 02 03:43:18 EST 2005-->
 <TITLE>
-c3p0-oracle-thin-extras-0.8.5 API Documentation
+c3p0-oracle-thin-extras-0.8.5.1 API Documentation
 </TITLE>
 </HEAD>
 <FRAMESET cols="20%,80%">
