@@ -10,8 +10,8 @@
 #c3p0.maxPoolSize=3
 #c3p0.checkoutTimeout=1000
 #c3p0.idleConnectionTestPeriod=5
-c3p0.maxIdleTime=80
-#c3p0.maxStatements=10
+#c3p0.maxIdleTime=80
+c3p0.maxStatements=4
 #c3p0.maxStatementsPerConnection=8
 #c3p0.preferredTestQuery=SELECT a FROM emptyyukyuk WHERE a = 5
 #c3p0.preferredTestQuery=SELECT a FROM testpbds WHERE a = 5
