@@ -1,3 +1,3 @@
 #autogenerated -- do not edit!
 #Mon Feb 07 03:28:26 EST 2005
-c3p0.version=0.8.5
+c3p0.version=0.8.5.1
